name:              persistent-chunked
version:           0.0.2
synopsis:          Helpers for running chunked queries with persistent
description:       This package provides support for streaming queries that
                   return chunked sources. This is often desirable when iterating
                   over large datasets or doing batch updates on a big table. 
                   If you are using the MySQL backend, also take a look at the
                   persistent-mysql-extra package which provides several MySQL-specific
                   batch queries.
                   Contributions welcome!
homepage:          https://github.com/circuithub/persistent-chunked
bug-reports:       https://github.com/circuithub/persistent-chunked/issues
license:           MIT
license-file:      LICENSE
author:            Rehno Lindeque <code@rehno.lindeque.name>
maintainer:        Rehno Lindeque <code@rehno.lindeque.name>
copyright:         2014 CircuitHub, Inc.
cabal-version:     >= 1.10
build-type:        Simple

flag dev
    description:   Turn on development settings
    default:       False

library
    exposed-modules: Database.Persist.Chunk

    if flag(dev)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0 -j
    else
        ghc-options:   -Wall -O2

    default-language: Haskell2010

    build-depends: base                          >= 4.7           && < 5
                 , persistent                    < 2.0
                 , conduit                       >= 1.1.7
                 , conduit-combinators
